<resources>
    <string name="app_name">Nimble</string>
    <string name="catalog">fragment_catalog</string>
    <string name="signin">fragment_signin</string>
    <string name="pannier">fragment_pannier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstName">Имя</string>
    <string name="LastName">Фамилия</string>
    <string name="Email">Почта</string>
    <string name="Password">Пароль</string>
    <string name="rePassword">Повторить пароль</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="Back">У меня уже есть аккаунт</string>
    <string name="entry">Вход</string>
    <string name="register">Зарегистрироваться</string>
    <string name="nameproduct">nameProduct</string>
    <string name="price">price</string>
    <string name="manufacturer">manufacturer</string>
    <string name="description">description</string>
    <string name="specification">specification</string>
    <string name="add">Добавить</string>
    <string name="Nunito" />
    <string name="your_cart_is_empty">Ваша корзина пуста</string>
    <string name="error">error</string>
    <string name="password">Пароль</string>
    <string name="profile">Профиль</string>
    <string name="create_item">Создать товар</string>
    <string name="safe">Сохранить</string>
</resources>