<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.SignupFragment"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Создание аккаунта"
        android:textSize="25dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/textcolor"
        android:background="@drawable/graybordertop"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="0dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/actionbarcolor">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textcolor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:id="@+id/firstNameEdit"
                    android:layout_height="wrap_content"
                    android:hint="@string/FirstName"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textcolor"
                android:layout_marginTop="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastNameEdit"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/LastName"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/textcolor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailEdit"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/textcolor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordEditRegist"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"/>




            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/textcolor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/conPasswordEdit"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:hint="@string/rePassword"
                android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.button.MaterialButton
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/signupButton"
               android:layout_marginTop="12dp"
               android:insetBottom="0dp"
               android:insetTop="0dp"
               android:text="@string/Register"
               android:backgroundTint="@color/colorbutton"
               android:textColor="@color/textcolor"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:layout_marginTop="12dp"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:backgroundTint="@color/colorbutton"
                android:textColor="@color/textcolor"
                android:text="@string/Back"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>